# awmaker

./: .gitignore  Makefile.am  NEWS  README  README.WMAKER  configure.ac
WINGs/: findfile.c  proplist.c  userdefaults.c  wapplication.c  wcolorpanel.c  wfont.c
WINGs/Tests/: Makefile.am
WPrefs.app/: Appearance.c  Expert.c  KeyboardShortcuts.c  MouseSettings.c  README
WPrefs.app/po/: ru.po  zh_TW.po
WindowMaker/Defaults/: Makefile.am
WindowMaker/IconSets/: Makefile.am
WindowMaker/Icons/: Makefile.am
WindowMaker/Pixmaps/: Makefile.am
WindowMaker/Styles/: Makefile.am
WindowMaker/Themes/: Makefile.am
debian/patches/: 10_support_imagemagick6.diff  56_ignore_runstatedir.diff  60_fix_wraster_symbol_versioning.diff  75_WPrefs_to_bindir_when_gnustedir_is_set.diff
src/: Makefile.am  WindowMaker.h  actions.c  actions.h  animations.c  animations.h  appicon.c  appicon.h  application.c  application.h  appmenu.c  appmenu.h  balloon.c  balloon.h  client.c  clip.c  clip.h  colormap.c  colormap.h  cycling.c  defaults.c  defaults.h  dialog.c  dialog.h  dock-core.c  dock-core.h  dock.c  dock.h  dockedapp.c  dockedapp.h  drawer.c  drawer.h  event.c  event.h  framewin.c  framewin.h  icon.c  icon.h  input.c  input.h  (+66 more)
util/: getstyle.c
wrlib/: gradient.c
